Updating I build and unit tests to build new jobs from json